# Billsapp

./: CMakeLists.txt  README.md  bills.csv  main.cpp
Domain/: Bill.cpp  Bill.h
GUI/: GUI.cpp  GUI.h
Repository/: Repository.cpp  Repository.h
